# watch-party

./: .gitignore  Cargo.toml  watch-party.code-workspace  watch-party.default.toml
docs/: DESIGN.md
src/: main.rs
src/core/: config.rs  identity.rs  manifest.rs  messages.rs  mod.rs  session.rs
src/disc/: analyzer.rs  chunk_map.rs  keyframes.rs  mod.rs  optical.rs  probe.rs  source.rs
src/player/: ipc.rs  mod.rs
src/stream/: encode.rs  framing.rs  mod.rs  transport.rs
src/sync/: mod.rs
src/tui/: mod.rs  render.rs
